--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
   "description": "Idiomatic XMPP client, component & server library for node.js + browserify",
   "author": "Astro",
   "dependencies": {
-    "node-expat": ">=1.4.1",
-    "ltx": "0.x",
-    "request": ">= 2.9.153",
+    "brfs": "^1.4.0",
     "browser-request": ">= 0.2.0",
+    "browserify": "^11.0.1",
     "faye-websocket": ">= 0.4.1",
-    "browserify": "~3.19.1",
-    "brfs": "0.0.8",
-    "node-xmpp-component": "git+https://github.com/node-xmpp/node-xmpp-component.git",
+    "ltx": "0.x",
+    "node-expat": ">=1.4.1",
     "node-xmpp-client": "git+https://github.com/node-xmpp/node-xmpp-client.git",
+    "node-xmpp-component": "git+https://github.com/node-xmpp/node-xmpp-component.git",
+    "node-xmpp-core": "git+https://github.com/node-xmpp/node-xmpp-core.git",
     "node-xmpp-server": "git+https://github.com/node-xmpp/node-xmpp-server.git",
-    "node-xmpp-core": "git+https://github.com/node-xmpp/node-xmpp-core.git"
+    "request": ">= 2.9.153"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-browserify": "~1.3.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-mocha-cli": "~1.3.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-mocha-cli": "^1.14.0",
     "mocha": ">=1.0.0",
     "pem": "https://github.com/dodo/pem/tarball/altNames",
-    "should": "~3.1.0"
+    "should": "^7.0.2"
   },
   "browser": {
     "request": "browser-request",
